[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdcproto"
version = "0.0.8"
description = 'Host Device Communication protocol'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Axel T. J. Rohde", email = "kiksotik@gmail.com" },
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pyserial~=3.5",
  "semver~=2.13.0"
]
dynamic = []

[project.urls]
Documentation = "https://github.com/kiksotik/hdc#readme"
Issues = "https://github.com/kiksotik/hdc/issues"
Source = "https://github.com/kiksotik/hdc"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hdcproto --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = []

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build]
exclude = [
  "hdcproto/device",
  "hdcproto/util",
  "hdcproto/host/proxy_introspected.py"
]